Fix border on mobile

--- a/gitjobs-server/static/css/styles.css
+++ b/gitjobs-server/static/css/styles.css
@@ -1230,6 +1230,10 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
+  .border-r {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 1px;
+  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
